# ReimeiBot

./: .gitignore  README.md  README_EN.md  bot.py  pyproject.toml
ReimeiBotSRC/plugins/reimeibot_plugin_core/: __init__.py  permission.py
ReimeiBotSRC/plugins/reimeibot_plugin_database/: __init__.py  _permission.py  config.py
ReimeiBotSRC/plugins/reimeibot_plugin_settings/: __init__.py  config.py
ReimeiBot文档/: PluginRegistration.md  ReimeiBot附加版权声明.md
reimei_api/: __init__.py  help.py  metadata.py  permission.py  rule.py  utils.py
reimei_docs/: LICENSE_extra.md
reimei_plugins/reimeibot_plugin_call_api/: __init__.py  config.py
reimei_plugins/reimeibot_plugin_core/: __init__.py  config.py
reimei_plugins/reimeibot_plugin_database/: __init__.py  _permission.py  _rule.py  config.py
reimei_plugins/reimeibot_plugin_settings/: __init__.py  config.py
