[project]
name = "ReimeiBot"
version = "0.2.0"
description = "ReimeiBot"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["reimei_plugins"]
