[project]
name = "ReimeiBot"
version = "0.4.0"
description = "ReimeiBot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiofile>=3.9.0",
    "httpx>=0.28.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.3",
    "pydantic>=2.11.9",
]

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["reimei_plugins"]

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
default = true
